tests/codegen/fail/object/attr_no_fields.rs
use juniper::graphql_object;

struct Obj;

#[graphql_object]
impl Obj {}

fn main() {}
