tests/codegen/fail/object/attr_no_fields.stderr
error: GraphQL object must have at least one field
       · note: https://spec.graphql.org/October2021#sec-Objects

 --> fail/object/attr_no_fields.rs:6:6
  |
6 | impl Obj {}
  |      ^^^
